# picoFlamingo

./: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  TODO  config.h.in  configure  configure.ac  font_list.txt  shader_list.txt  version.m4
apps/: Makefile.am  Makefile.in
apps/video_server/: Makefile.am  Makefile.in  README  jpeg.c  jpeg.h  v4l2.c  v4l2.mk
doc/: Makefile.am  Makefile.in  cracking-egg-user-manual.tex
doc/images/: back-page.eps  front_pag_header.eps  front_page_logo.eps  front_page_logo1.eps  papermint-logo.eps  pf-control.eps  picoflamingo_seal.eps  picoflamingoid.eps  pink-egg-hw.eps  pink-egg.eps  post-proc2.eps
fonts/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in  render_engine_sys.h
shaders/: Makefile.am  Makefile.in  basic-text.frag  basic-text.vert  basic.frag  basic.vert  diffuse.frag  diffuse.vert  per-pixel.frag  per-pixel.vert  post1.frag  post2.frag  post2.vert  post3.frag
slides/: Makefile.am  Makefile.in
slides/pf/: 3D2.3ds  3D4.3ds  3D5.3ds  Makefile.am  Makefile.in  slide1.pfs  slide2.pfs  slide3.pfs  slide4.pfs  slide5.pfs  slide6.pfs  template01.pfi
src/: 3ds.c  3ds.h  Makefile.am  Makefile.in  const.h.in  input.c  input.h  log.h  main.c  matrix.c  matrix.h  pf_3d.c  pf_3d.h  pf_cube1.c  pf_font.c  pf_font.h  pf_fx.c  pf_fx.h  pf_group.c  pf_group.h  pf_image.c  pf_image.h  pf_mesh.c  pf_mesh.h  pf_quad.c  pf_quad.h  pf_render_item.c  pf_render_item.h  pf_sphere.c  pf_stext.c  pf_stext.h  pf_tex_mng.c  pf_tex_mng.h  pf_text.c  pf_text.h  pfs_cmd.c  pfs_cmd.h  pfs_files.c  pfs_files.h  render_engine.c  (+5 more)
src/fb/src/: render_engine_sys.c
src/rpi/src/: render_engine_sys.c
src/support/: stb_image.c
src/x11/src/: render_engine_sys.c
