EXTRA_DIST=cracking-egg-user-manual.tex\
	images/back-page.eps \
	images/front_page_logo1.eps \
	images/front_page_logo.eps \
	images/front_pag_header.eps \
	images/papermint-logo.eps \
	images/pf-control.eps \
	images/picoflamingoid.eps \
	images/picoflamingo_seal.eps \
	images/pink-egg.eps \
	images/pink-egg-hw.eps \
	images/post-proc2.eps 
