# FIXME: this needs to go to the proper directory
EXTRA_DIST=basic.frag basic-text.frag basic-text.vert basic.vert \
diffuse.frag diffuse.vert per-pixel.frag per-pixel.vert \
post1.frag post1.vert post2.frag post2.vert post3.frag post3.vert

cfgdir=@PF_DATADIR@/shaders
cfg_DATA= basic.frag basic-text.frag basic-text.vert basic.vert \
diffuse.frag diffuse.vert per-pixel.frag per-pixel.vert \
post1.frag post1.vert post2.frag post2.vert post3.frag post3.vert
