EXTRA_DIST=3D2.3ds 3D4.3ds 3D5.3ds barra.png beagle2.png bg_3.png bg_4.png \
	bg.bmp Makefile.am moko.png nokia1.png omap1.png pe.png pico1.png \
	picoflamingo_seal.png slide02.png slide03.png slide1.pfs slide2.pfs \
	slide3.pfs slide4.pfs slide5.pfs slide6.pfs splash.png template01.pfi

cfgdir=@PF_DATADIR@/examples/pf

cfg_DATA=3D2.3ds 3D4.3ds 3D5.3ds barra.png beagle2.png bg_3.png bg_4.png \
	bg.bmp Makefile.am moko.png nokia1.png omap1.png pe.png pico1.png \
	picoflamingo_seal.png slide02.png slide03.png slide1.pfs slide2.pfs \
	slide3.pfs slide4.pfs slide5.pfs slide6.pfs splash.png template01.pfi
